LAMBDA-133: fixing channel thumb distortion, renaming pager-header-edit

--- a/lambdaproject/static/bootstrap/css/custom_style.css
+++ b/lambdaproject/static/bootstrap/css/custom_style.css
@@ -84,11 +84,11 @@ ul.edit-menu {
 }
 
 .channel-thumb {
-	width: 100px;
-	height: 100px;
+	max-width: 100px;
+	max-height: 100px;
 	margin: 0px 10px 0px 0px;
 }
 
-.page-header-edit {
+.page-header-channel {
 	min-height: 75px;
 }
